# Summer_Practice

./: CMakeLists.txt  main.cpp
CoDec/: CMakeLists.txt  CoDec.cpp  CoDec.hpp
CoDec/CoDecTechniques/: CMakeLists.txt
CoDec/CoDecTechniques/ArithmeticCoder/: ArithmeticCoder.cpp  ArithmeticCoder.hpp
CoDec/CoDecTechniques/CoDecUtilities/: CoDecUtilities.cpp  CoDecUtilities.hpp
CoDec/CoDecTechniques/HuffmanCoder/: HuffmanCoder.hpp
CoDec/IdentityCoDec/: CMakeLists.txt  IdentityCoDec.cpp  IdentityCoDec.hpp
CoDec/RLCoDec/: CMakeLists.txt  RLCoDec.cpp  RLCoDec.hpp
CoDec/XNFCoDec/: CMakeLists.txt  Reader.hpp  Writer.hpp  XNFCoDec.cpp  XNFCoDec.hpp
CoDec/XNFCoDec/XNFDecoder/: CMakeLists.txt  XNFDecoder.cpp  XNFDecoder.hpp
CoDec/XNFCoDec/XNFEncoder/: CMakeLists.txt  XNFEncoder.cpp  XNFEncoder.hpp
TestFiles/: compressedTestFile.gac  decompressed.txt  decompressedTestFile.txt
Utilities/: CMakeLists.txt  FastBitPermutationIndex.hpp  FastChoose.hpp  utilities.cpp  utilities.hpp
XNF/: CMakeLists.txt  XNF.cpp  XNF.hpp  XNF_Generic.cpp  XNF_Generic.hpp  XNF_Iterator.hpp
XNF/Conjunction/: CMakeLists.txt  Conjunction.cpp  Conjunction.hpp  ConjunctionDifference.hpp
XNFBreeder/: CMakeLists.txt  XNFBreeder.cpp  XNFBreeder.hpp
XNFEvolver/: CMakeLists.txt  XNFEvolver.cpp  XNFEvolver.hpp
